# rovi

./: .gitignore  README.md
RO/man02/pathplanner/: CMakeLists.txt  main.cpp
finalProject/: how_to_run.README  moment_limits.txt  moments_classified.csv  moments_classified02.csv  test.sh
finalProject/SamplePluginPA10/: README_PLUGINGUIDE
finalProject/harris/: CMakeLists.txt  main.cpp
finalProject/hough/: CMakeLists.txt  main.cpp
finalProject/idealDataplots/: plot.R  relativeConfVel_fast_1pt.csv  relativeConfVel_fast_3pt.csv  relativeConfVel_medium_1pt.csv  relativeConfVel_medium_3pt.csv  relativeConfVel_slow_1pt.csv  relativeConfVel_slow_3pt.csv  robotConfiguration_fast_1pt.csv  robotConfiguration_fast_3pt.csv  robotConfiguration_medium_1pt.csv  robotConfiguration_medium_3pt.csv  robotConfiguration_slow_1pt.csv  robotConfiguration_slow_3pt.csv  toolPose_fast_1pt.csv  toolPose_slow_1pt.csv  trackingError_fast_1pt.csv  trackingError_fast_3pt.csv  trackingError_medium_1pt.csv  trackingError_medium_3pt.csv  trackingError_slow_1pt.csv  trackingError_slow_3pt.csv
finalProject/marker1_detector/: CMakeLists.txt  main.cpp
finalProject/marker2_detector/: CMakeLists.txt  main.cpp
finalProject/marker3_detector/: CMakeLists.txt  main.cpp
finalProject/marker3_detector_gpu/: CMakeLists.txt  main.cpp
finalProject/report/: main.tex
finalProject/time_analysis_detectors/: Makefile  analysis.R  marker3_crop.csv  marker3_good_matches.csv  marker3_unoptimized.csv
finalProject/trackingerrorplot/: circle.csv  corny.csv  lines.csv  plot.R
finalProject/vision_data/: plot.R  (+2 more)
(+174 files in other folders)
